# cpp-paint

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  drawing.cpp  drawing.h  main.cpp  mainwindow.cpp  mainwindow.h  paintingarea.cpp  paintingarea.h
